# rsqlx

./: .Rbuildignore  DESCRIPTION  NAMESPACE
R/: extendr-wrappers.R  funcs.R
man/: read_table.Rd  say_hello_world.Rd
scripts/: try_rsqlx.R
src/: Makevars  Makevars.win  entrypoint.c  rsqlx-win.def
src/rust/: Cargo.toml
src/rust/src/: lib.rs
