[package]
name = 'rsqlx'
publish = false
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'rsqlx'

[dependencies]
extendr-api = '*'
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "sqlite", "mysql"] }
tokio = { version = "1.4", features = ["full"] }
