[package]
name = 'rsqlx'
publish = false
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'rsqlx'

[dependencies]
extendr-api = {version = "0.7.1", features = ["result_list"]}
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "sqlite", "mysql"] }
tokio = { version = "1.4", features = ["full"] }
futures = "0.3"
